--- a/wiki/.gitattributes
+++ b/wiki/.gitattributes
@@ -4,3 +4,4 @@
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.gz filter=lfs diff=lfs merge=lfs -text
 *.gzip filter=lfs diff=lfs merge=lfs -text
+*.bz2 filter=lfs diff=lfs merge=lfs -text
